...
extension RoleScopeLabel on RoleScope {
  String get label {
    switch (this) {
      case RoleScope.fanApp:
        return 'Fan App';
      case RoleScope.creatorStudio:
        return 'Creator Studio';
    }
  }
}

typedef RoleSurfaceBuilder =
    Widget Function(BuildContext context, RoleSurfaceChrome chrome);
...
